2011-11-09  Dodji Seketeli  <dodji@redhat.com>

	PR debug/51032
	* decl2.c (check_member_template): Accept alias templates and ...
    	* parser.c (cp_parser_alias_declaration): ... use it here.

2011-11-08  Jason Merrill  <jason@redhat.com>

	PR c++/50835
	* typeck.c (build_x_conditional_expr): Preserve lvalue/xvalueness.
	* tree.c (lvalue_kind) [NON_DEPENDENT_EXPR]: Return clk_ordinary
	in C++98.

2011-11-08  Richard Guenther  <rguenther@suse.de>

	PR middle-end/51010
	* error.c (dump_expr): Handle SSA_NAMEs.

2011-11-07  Richard Henderson  <rth@redhat.com>
	    Aldy Hernandez  <aldyh@redhat.com>
	    Torvald Riegel  <triegel@redhat.com>

	Merged from transactional-memory.

	* call.c (build_new_function_call): Call tm_malloc_replacement.
	* class.c (check_bases): Compute transaction attributes for the
	class based on its base classes.
	(look_for_tm_attr_overrides, set_one_vmethod_tm_attributes,
	set_method_tm_attributes): New.
	(finish_struct_1): Call set_method_tm_attributes.
	* cp-tree.h (begin_transaction_stmt, finish_transaction_stmt,
	build_transaction_expr): Declare.
	(TRANSACTION_EXPR_IS_STMT): New.
	* decl.c (push_cp_library_fn): Set attribute to transaction_safe.
	* except.c (do_get_exception_ptr): Apply transaction_pure.
	(do_begin_catch): Mark _ITM_cxa_begin_catch transaction_pure and
	record as transactional-memory wrapper.
	(do_end_catch): Similarly for _ITM_cxa_end_catch.
	(do_allocate_exception): Similarly for _ITM_cxa_allocate_exception.
	(build_throw): Similarly for _ITM_cxa_throw. Make __cxa_rethrow pure.
	* parser.h (struct cp_parser): Add in_transaction flag.
	* parser.c (enum non_integral_constant): Add NIC_TRANSACTION.
	(cp_parser_non_integral_constant_expression): Handle NIC_TRANSACTION.
	(enum required_token): Add transaction tokens.
	(cp_parser_transaction, cp_parser_transaction_expression,
	cp_parser_function_transaction, cp_parser_transaction_cancel,
	cp_parser_txn_attribute_opt): New.