@@ -1,3 +1,8 @@
+2011-11-09  Dodji Seketeli  <dodji@redhat.com>
+
+	PR c++/51027
+	* include/ext/pointer.h (rebind): Append missing ';'.
+
 2011-11-09  Jonathan Wakely  <jwakely.gcc@gmail.com>
 
 	* include/bits/stl_vector.h (vector::_Alloc_traits): Make private.
